# ascii-armor

./: Cargo.toml  MANIFEST.yml  README.md  flake.nix
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
src/: lib.rs  main.rs
