[package]
name = "ascii-armor"
version = "0.7.1"
description = "ASCII Armor: binary to text encoding library and command-line utility"
keywords = ["ascii", "encoding"]
categories = ["encoding", "value-formatting", "command-line-utilities"]
readme = "README.md"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://github.com/UBIDECO/ascii-armor"
repository = "https://github.com/UBIDECO/ascii-armor"
rust-version = "1.70.0"  # from strict_encoding
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "armor"
path = "src/main.rs"

[lib]
name = "armor"

[dependencies]
amplify = "4.6.0"
strict_encoding = { version = "2.7.0-beta.4", optional = true }
baid64 = { version = "0.2.0", optional = true }
base64 = { version = "0.22.1", optional = true }
base85 = { version = "2.0.0", optional = true }
sha2 = "0.10.8"

[features]
default = ["strict", "base85"]
base64 = ["strict", "dep:base64"]
strict = ["strict_encoding", "baid64"]
